--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,20 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="mens_clothes">Mens clothes</string>
-    <string name="get_10_off_on_shirts">Get 10% off on shirts</string>
-    <string name="view_your_cart">View your cart</string>
-    <string name="googstore">GoogStore</string>
+    <string name="app_name">Android App for Google Analytics 4</string>
+    <string name="store_name">Ibby\'s T-Shirt Shop</string>
+    <string name="button_clothes">Clothes</string>
+    <string name="button_in_app_purchases">In-app purchases</string>
+    <string name="description_welcome">Welcome to Ibby\'s T-Shirt Shop</string>
+    <string name="description_products">All T-shirts</string>
+    <string name="item_compton">Compton</string>
+    <string name="item_comverges">Comverges</string>
+    <string name="item_flexigen">Flexigen</string>
+    <string name="item_fuelworks">Fuelworks</string>
+    <string name="item_futuris">Futuris</string>
+    <string name="item_isoternia">Isoternia</string>
+    <string name="item_kiosk">Kiosk</string>
+    <string name="item_lunchpod">Lunchpod</string>
+    <string name="item_masons">Masons</string>
+    <string name="item_pigzart">Pigzart</string>
+    <string name="item_poyo">Poyo</string>
+    <string name="item_zappix">Zappix</string>
 </resources>
