--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,43 @@
 <resources>
     <string name="app_name">Android App for Google Analytics 4</string>
     <string name="store_name">Ibby\'s T-Shirt Shop</string>
+    <string name="button_add_to_cart">Add to cart</string>
+    <string name="button_add_to_wishlist">Add to wishlist</string>
+    <string name="button_checkout">Begin checkout</string>
     <string name="button_clothes">Clothes</string>
     <string name="button_in_app_purchases">In-app purchases</string>
-    <string name="description_welcome">Welcome to Ibby\'s T-Shirt Shop</string>
+    <string name="button_next">Next: Billing</string>
+    <string name="button_view_item">View item</string>
+    <string name="button_visa">Visa</string>
+    <string name="button_mastercard">Mastercard</string>
+    <string name="button_amex">American Express</string>
+    <string name="button_paypal">PayPal</string>
+    <string name="button_purchase">Purchase</string>
+    <string name="description_cart">Your cart</string>
+    <string name="description_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget gravida urna. Fusce odio urna, ornare accumsan lorem eu, dapibus facilisis nisi. In non lorem fringilla, dictum arcu a, pulvinar ex. Nulla efficitur odio at dui finibus, eu scelerisque purus dignissim.</string>
     <string name="description_products">All T-shirts</string>
+    <string name="description_shipping_information">Shipping information</string>
+    <string name="description_shipping">Enter your shipping information (not recorded)</string>
+    <string name="description_billing_information">Billing information</string>
+    <string name="description_welcome">Welcome to Ibby\'s T-Shirt Shop</string>
+    <string name="description_payment">Choose a payment method (not recorded)</string>
+    <string name="description_no_items">No items in your cart</string>
     <string name="item_compton">Compton</string>
     <string name="item_comverges">Comverges</string>
     <string name="item_flexigen">Flexigen</string>
     <string name="item_fuelworks">Fuelworks</string>
-    <string name="item_futuris">Futuris</string>
-    <string name="item_isoternia">Isoternia</string>
-    <string name="item_kiosk">Kiosk</string>
-    <string name="item_lunchpod">Lunchpod</string>
-    <string name="item_masons">Masons</string>
-    <string name="item_pigzart">Pigzart</string>
-    <string name="item_poyo">Poyo</string>
-    <string name="item_zappix">Zappix</string>
+    <string name="price_compton">$44.00</string>
+    <string name="price_comverges">$33.00</string>
+    <string name="price_flexigen">$16.00</string>
+    <string name="price_fuelworks">$92.00</string>
+    <string name="button_view_promotion">View promotion</string>
+    <string name="description_confirmation">Order confirmed!</string>
+    <string name="button_home">Home</string>
+    <string name="button_refund">Get a refund</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last name</string>
+    <string name="address">Address</string>
+    <string name="city">City</string>
+    <string name="state">State</string>
+    <string name="zip_code">Zip code</string>
 </resources>
