Added the remaining ecommerce events, cleaned up the code a bit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,25 +5,30 @@
     <string name="button_add_to_wishlist">Add to wishlist</string>
     <string name="button_checkout">Begin checkout</string>
     <string name="button_clothes">Clothes</string>
+    <string name="button_download_file">Download file</string>
+    <string name="button_home">Home</string>
     <string name="button_in_app_purchases">In-app purchases</string>
     <string name="button_more_tests">Run more tests</string>
     <string name="button_next">Next: Billing</string>
+    <string name="button_refund">Get a refund</string>
+    <string name="button_sample_website">Open Ecommerce Website</string>
     <string name="button_view_item">View item</string>
     <string name="button_visa">Visa</string>
     <string name="button_mastercard">Mastercard</string>
     <string name="button_amex">American Express</string>
     <string name="button_paypal">PayPal</string>
     <string name="button_purchase">Purchase</string>
+    <string name="description_billing_information">Billing information</string>
     <string name="description_cart">Your cart</string>
     <string name="description_cart_subtitle">Confirm the items in your shopping cart</string>
     <string name="description_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget gravida urna. Fusce odio urna, ornare accumsan lorem eu, dapibus facilisis nisi. In non lorem fringilla, dictum arcu a, pulvinar ex. Nulla efficitur odio at dui finibus, eu scelerisque purus dignissim.</string>
+    <string name="description_no_items">No items in your cart</string>
+    <string name="description_payment">Choose a payment method (not recorded)</string>
     <string name="description_products">All T-shirts</string>
     <string name="description_shipping_information">Shipping information</string>
     <string name="description_shipping">Enter your shipping information (not recorded)</string>
-    <string name="description_billing_information">Billing information</string>
+    <string name="description_tests">Additional tests</string>
     <string name="description_welcome">Welcome to Ibby\'s T-Shirt Shop</string>
-    <string name="description_payment">Choose a payment method (not recorded)</string>
-    <string name="description_no_items">No items in your cart</string>
     <string name="item_compton">Compton</string>
     <string name="item_comverges">Comverges</string>
     <string name="item_flexigen">Flexigen</string>
@@ -34,8 +39,6 @@
     <string name="price_fuelworks">$92.00</string>
     <string name="button_view_promotion">Get 10% off Flexigen</string>
     <string name="description_confirmation">Order confirmed!</string>
-    <string name="button_home">Home</string>
-    <string name="button_refund">Get a refund</string>
     <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
     <string name="address">Address</string>
